# custom-list

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.c
.guix/modules/: custom-list.scm
cmake/: CustomLSConfig.cmake.in  cmake_uninstall.cmake
include/: custom_ls.h
pkgconfig/: custom_ls.pc.in
src/: custom_ls.c
